--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "node-fetch": "^3.3.2",
-    "puppeteer": "^21.4.1"
+    "puppeteer": "^21.4.1",
+    "puppeteer-core": "^24.6.1"
   }
 }
